// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageElement should match the snapshot 1`] = `
<div>
  <div
    aria-live="assertive"
    class="fr-messages-group"
    id="id-mock"
  >
    <div
      data-mockid="MessageValidElement"
    />
    <div
      data-mockid="MessageErrorElement"
    />
  </div>
</div>
`;

exports[`MessageElement should match the snapshot, when valid and error are not defined 1`] = `
<div>
  <div
    aria-live="assertive"
    class="fr-messages-group"
    id="id-mock"
  />
</div>
`;
